--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -3,7 +3,12 @@ $text = #222222
 $secondary = #8D5EA5
 $highlight = #F2E9E4
 $text-light = #ffffff
+
 $border = #bababa
 $border-light = #efefef
+
 $font-size-header = 1.2rem
 $font-size-description = 0.9rem
+
+$task-done-color = lighten(#7BDA58, 15)
+$task-started-color = #F4F0BB
