--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -10,5 +10,5 @@ $border-light = #efefef
 $font-size-header = 1.2rem
 $font-size-description = 0.9rem
 
-$task-done-color = lighten(#7BDA58, 25)
-$task-started-color = #F4F0BB
+$task-done-color = lighten(#7BDA58, 10)
+$task-started-color = darken($primary, 10)
